<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?actionBarSize"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/sm_ic_arrow_back_24">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sm_add_a_place"
                style="?sm_textViewStyleSemiBold15"
                />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/sm_margin_padding_size_medium"
            android:paddingBottom="64dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/placeNameTextInputLayout"
                style="@style/SM.Widget.Soramitsu.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sm_margin_padding_size_medium"
                android:layout_marginEnd="@dimen/sm_margin_padding_size_medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/placeNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/SM.TextAppearance.Soramitsu.MaterialComponents.Body1"
                    android:hint="@string/sm_name"
                    tools:text="Body shop"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/addressTextView"
                style="?sm_textViewStyleRegular15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_margin_padding_size_medium"
                android:drawablePadding="@dimen/sm_margin_padding_size_medium"
                android:gravity="center_vertical"
                android:padding="@dimen/sm_margin_padding_size_medium"
                app:drawableStartCompat="@drawable/sm_ic_location_circle_44"
                tools:text="Street 3, Phnom Penh, Cambodia" />

            <TextView
                android:id="@+id/categoryTextView"
                style="?sm_textViewStyleRegular15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/sm_margin_padding_size_medium"
                android:gravity="center_vertical"
                android:padding="@dimen/sm_margin_padding_size_medium"
                tools:drawableStartCompat="@drawable/sm_ic_supermarket_circle_44"
                tools:text="Supermarket" />

            <TextView
                style="?sm_textViewStyleSemiBold15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_margin_padding_size_medium"
                android:padding="@dimen/sm_margin_padding_size_medium"
                android:text="@string/sm_contacts" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/placePhoneNumberTextInputLayout"
                style="@style/SM.Widget.Soramitsu.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sm_margin_padding_size_medium"
                android:layout_marginEnd="@dimen/sm_margin_padding_size_medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/placePhoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sm_phone_number"
                    android:maxLines="1"
                    android:inputType="phone"
                    tools:text="+777 787 656 45 67" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/websiteTextInputLayout"
                style="@style/SM.Widget.Soramitsu.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sm_margin_padding_size_medium"
                android:layout_marginTop="@dimen/sm_margin_padding_size_medium"
                android:layout_marginEnd="@dimen/sm_margin_padding_size_medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/websiteTditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sm_website"
                    android:maxLines="1"
                    android:inputType="textUri"
                    tools:text="www.bodyshop.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/facebookTextInputLayout"
                style="@style/SM.Widget.Soramitsu.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sm_margin_padding_size_medium"
                android:layout_marginTop="@dimen/sm_margin_padding_size_medium"
                android:layout_marginEnd="@dimen/sm_margin_padding_size_medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/facebookEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sm_facebook"
                    android:maxLines="1"
                    android:inputType="textUri"
                    tools:text="Facebook.com/bodyshop" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="?sm_textViewStyleSemiBold15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_margin_padding_size_medium"
                android:padding="@dimen/sm_margin_padding_size_medium"
                android:text="@string/sm_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sm_margin_padding_size_medium"
                android:layout_marginEnd="@dimen/sm_margin_padding_size_medium"
                android:text="@string/sm_logo_size_should_be_54x54" />

            <TextView
                android:id="@+id/addLogoTextView"
                style="?sm_textViewStyleRegular15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_margin_padding_size_small"
                android:drawablePadding="@dimen/sm_margin_padding_size_medium"
                android:gravity="center_vertical"
                android:padding="@dimen/sm_margin_padding_size_medium"
                android:text="@string/sm_add_logo_image"
                app:drawableStartCompat="@drawable/sm_ic_location_circle_44" />

            <TextView
                style="?sm_textViewStyleSemiBold15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_margin_padding_size_medium"
                android:padding="@dimen/sm_margin_padding_size_medium"
                android:text="@string/sm_photo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sm_margin_padding_size_medium"
                android:layout_marginEnd="@dimen/sm_margin_padding_size_medium"
                android:text="@string/sm_add_photo_hint" />

            <TextView
                android:id="@+id/addPhotoTextView"
                style="?sm_textViewStyleRegular15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_margin_padding_size_small"
                android:drawablePadding="@dimen/sm_margin_padding_size_medium"
                android:gravity="center_vertical"
                android:padding="@dimen/sm_margin_padding_size_medium"
                android:text="@string/sm_add_photo"
                app:drawableStartCompat="@drawable/sm_ic_insert_photo_circle_44" />

            <TextView
                style="?sm_textViewStyleSemiBold15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_margin_padding_size_medium"
                android:padding="@dimen/sm_margin_padding_size_medium"
                android:text="@string/sm_working_hours" />

            <TextView
                android:id="@+id/addScheduleTextView"
                style="?sm_textViewStyleRegular15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/sm_margin_padding_size_medium"
                android:gravity="center_vertical"
                android:padding="@dimen/sm_margin_padding_size_medium"
                android:text="@string/sm_add_schedule"
                app:drawableStartCompat="@drawable/sm_ic_insert_photo_circle_44" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAndSendForReviewButton"
        style="@style/SM.Widget.Soramitsu.MaterialComponents.Button.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sm_margin_padding_size_medium"
        android:text="@string/sm_create_and_send_for_review"
        android:layout_gravity="bottom"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

