<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/categoryBank"
        style="@style/Widget.Soramitsu.Map.Category"
        android:layout_width="@dimen/category_card_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableTop="?soramitsuMapCategoryIconDeposit"
        android:text="@string/sm_category_bank"
        app:layout_constraintEnd_toStartOf="@id/categoryServices"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoryServices"
        style="@style/Widget.Soramitsu.Map.Category"
        android:layout_width="@dimen/category_card_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableTop="?soramitsuMapCategoryIconServices"
        android:text="@string/sm_category_services"
        app:layout_constraintEnd_toStartOf="@id/categoryFood"
        app:layout_constraintStart_toEndOf="@id/categoryBank"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoryFood"
        style="@style/Widget.Soramitsu.Map.Category"
        android:layout_width="@dimen/category_card_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableTop="?soramitsuMapCategoryIconRestaurant"
        android:text="@string/sm_category_food"
        app:layout_constraintEnd_toStartOf="@id/categorySupermarkets"
        app:layout_constraintStart_toEndOf="@id/categoryServices"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categorySupermarkets"
        style="@style/Widget.Soramitsu.Map.Category"
        android:layout_width="@dimen/category_card_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableTop="?soramitsuMapCategoryIconSupermarket"
        android:text="@string/sm_category_supermarkets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/categoryFood"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoryPharmacy"
        style="@style/Widget.Soramitsu.Map.Category"
        android:layout_width="@dimen/category_card_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableTop="?soramitsuMapCategoryIconPharmacy"
        android:text="@string/sm_category_pharmacy"
        app:layout_constraintEnd_toStartOf="@id/categoryServices"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryBank" />

    <TextView
        android:id="@+id/categoryEntertainment"
        style="@style/Widget.Soramitsu.Map.Category"
        android:layout_width="@dimen/category_card_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableTop="?soramitsuMapCategoryIconEntertainment"
        android:text="@string/sm_category_entertainment"
        app:layout_constraintEnd_toStartOf="@id/categoryEducation"
        app:layout_constraintStart_toEndOf="@id/categoryPharmacy"
        app:layout_constraintTop_toBottomOf="@id/categoryBank" />

    <TextView
        android:id="@+id/categoryEducation"
        style="@style/Widget.Soramitsu.Map.Category"
        android:layout_width="@dimen/category_card_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableTop="?soramitsuMapCategoryIconEducation"
        android:text="@string/sm_category_education"
        app:layout_constraintEnd_toStartOf="@id/categoryOther"
        app:layout_constraintStart_toEndOf="@id/categoryEntertainment"
        app:layout_constraintTop_toBottomOf="@id/categoryBank" />

    <TextView
        android:id="@+id/categoryOther"
        style="@style/Widget.Soramitsu.Map.Category"
        android:layout_width="@dimen/category_card_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableTop="?soramitsuMapCategoryIconOther"
        android:text="@string/sm_category_other"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/categoryEducation"
        app:layout_constraintTop_toBottomOf="@id/categoryBank" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/categoriesBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="categoryPharmacy,categoryEntertainment,categoryEducation,categoryOther" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?soramitsuMapCategoriesBottomSheetSeparatorColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoriesBarrier" />

    <TextView
        android:id="@+id/nearbyPlacesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        android:text="?attr/soramitsuMapNearbyPlacesTitleText"
        android:textAppearance="?soramitsuMapNearbyPlacesTitleTextAppearance"
        app:layout_constraintTop_toBottomOf="@id/categoriesBarrier" />

</androidx.constraintlayout.widget.ConstraintLayout>