<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addPlaceBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:contentDescription="@string/sm_close_place_info_button"
        android:src="@drawable/sm_ic_arrow_back_24"
        app:backgroundTint="@android:color/white"
        app:ensureMinTouchTargetSize="true"
        app:fabSize="mini"
        app:layout_anchor="@id/addPlaceBottomSheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:useCompatPadding="true" />

    <View
        android:id="@+id/contentBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/sm_rounded_background_with_topper"
        app:layout_constraintTop_toBottomOf="@id/closeButton"
        app:layout_constraintBottom_toBottomOf="@id/addressTextView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/placeNameTextView"
        style="?sm_textViewStyleBold20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_margin_padding_size_medium"
        android:paddingHorizontal="@dimen/sm_margin_padding_size_medium"
        android:paddingVertical="@dimen/sm_margin_padding_size_small"
        android:text="@string/sm_dropped_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/contentBackground" />

    <TextView
        android:id="@+id/placeAddressTextView"
        style="?sm_textViewStyleRegular14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/sm_margin_padding_size_medium"
        app:layout_constraintStart_toStartOf="@id/placeNameTextView"
        app:layout_constraintTop_toBottomOf="@id/placeNameTextView"
        tools:text="Bank · #298 Street 93, Phnom Penh 12258, Cambodia" />

    <TextView
        android:id="@+id/addPlaceButton"
        style="?sm_textViewStyleRegular15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_margin_padding_size_medium"
        android:background="?selectableItemBackground"
        android:drawablePadding="@dimen/sm_margin_padding_size_medium"
        android:padding="@dimen/sm_margin_padding_size_medium"
        android:text="@string/sm_add_a_place"
        app:drawableStartCompat="@drawable/sm_ic_place_24"
        app:layout_constraintTop_toBottomOf="@id/placeAddressTextView" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="56dp"
        android:background="?attr/sm_categoriesBottomSheetSeparatorColor"
        app:layout_constraintTop_toBottomOf="@id/addPlaceButton" />

    <TextView
        android:id="@+id/addressTextView"
        style="?sm_textViewStyleRegular15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawablePadding="@dimen/sm_margin_padding_size_medium"
        android:padding="@dimen/sm_margin_padding_size_medium"
        android:text="@string/sm_add_a_place"
        tools:text="Phnom Penh 12258, Cambodia"
        app:drawableStartCompat="@drawable/sm_ic_near_me_24"
        app:layout_constraintTop_toBottomOf="@id/addPlaceButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
